--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /* Top Menu */
 #topMenu {
-    position:absolute;
+    position: absolute;
     top: 50px;
-    left: 520px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 #topMenu li a {
     text-decoration: none;
